--- a/road-of-trials-intro.html
+++ b/road-of-trials-intro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title> Road of Trials (Intro)</title> <link href="main.css" rel="stylesheet" /> </head>
+<head> <title> Road of Trials (Intro)</title> <link href="css/main.css" rel="stylesheet" /> </head>
 <body>
 <h1> Road of Trials (Intro) </h1>
 
