--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <body>
 
 <h1> Sky Music </h1>
-
-<ul>
-  <li> <a href="./road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
-  <li> <a href="./i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
   
-</ul>
+  <h2> Music Sheets </h2>
+
+  <ul>
+    <li> <a href="./road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
+    <li> <a href="./i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
+
+  </ul>
+  
+  
+<hr />
   
 
 <h2> Contributors </h2>
