Update css and home links

--- a/threshold-bass.html
+++ b/threshold-bass.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head> <title>threshold-bass</title> <link href="main.css" rel="stylesheet" /> </head>
+<head> <title>threshold-bass</title> <link href="./css/main.css" rel="stylesheet" /> </head>
 <body>
-<h1> Threshold (Bass Intro) &mdash; Journey OST </h1>
+<h1> Threshold (Bass Intro) &ndash; Journey OST </h1>
 <p> <b>Original Artist(s):</b> Austin Wintory </p>
 <p> <b> Transcript:</b> Tracey </p>
 <p> <b> Recommended key:</b> E major </p>
 <div id="transcript">
+
+<p>
+<a href="./" > Go Home </a>
+</p>
 
 <h2>1.</h2>
 
