--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
 <body>
 
 <h1> Sky Music </h1>
-  
+
   <h2> Music Sheets </h2>
 
   <ul>
     <li> <a href="./road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
     <li> <a href="./i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
+    <li> <a href="./threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
 
   </ul>
-  
-  
+
+
 <hr />
-  
+
 
 <h2> Contributors </h2>
 
 <ul>
   <li> Tracey </li>
   <li> Sera </li>
-  
+
 </ul>
 
 <h2> Thanks </h2>
