Add embedded video to I was born for this

--- a/i-was-born-for-this.html
+++ b/i-was-born-for-this.html
@@ -9,6 +9,9 @@
 <p>
   Purple notes are played on off-beats. Watch <a href="https://www.youtube.com/watch?v=4B4VBHOt6Rc" target="_blank">YouTube video</a>.
 </p>
+  
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4B4VBHOt6Rc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
   <p> 6 beats per line </p>
   
 <p>
