Create `songs` directory

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <h2> Music Sheets </h2>
 
   <ul>
-    <li> <a href="./road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
-    <li> <a href="./i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
-    <li> <a href="./threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
+    <li> <a href="./songs/road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
+    <li> <a href="./songs/i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
+    <li> <a href="./songs/threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
 
   </ul>
 
