--- a/songs/i-was-born-for-this.html
+++ b/songs/i-was-born-for-this.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>I Was Born For This (Journey)</title> <link href="css/main.css" rel="stylesheet" /> </head>
+<head> <title>I Was Born For This (Journey)</title> <link href="./css/main.css" rel="stylesheet" /> </head>
 <body>
 <h1> I Was Born For This (Journey) </h1>
 <p> <b>Original Artist(s):</b> Austin Wintory </p>
@@ -9,15 +9,15 @@
 <p>
   Purple notes are played on off-beats. Watch <a href="https://www.youtube.com/watch?v=4B4VBHOt6Rc" target="_blank">YouTube video</a>.
 </p>
-  
+
   <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/4B4VBHOt6Rc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
+
   <p> 6 beats per line </p>
-  
+
 <p>
 <a href="./" > Go Home </a>
 </p>
-  
+
 <div id="transcript">
 
 <h2>1.</h2>
