--- a/songs/road-of-trials-intro.html
+++ b/songs/road-of-trials-intro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title> Road of Trials (Intro)</title> <link href="css/main.css" rel="stylesheet" /> </head>
+<head> <title> Road of Trials (Intro)</title> <link href="./css/main.css" rel="stylesheet" /> </head>
 <body>
 <h1> Road of Trials (Intro) </h1>
 
@@ -10,7 +10,7 @@
 <p>
   <b>Transcript:</b> Tracey.
 </p>
-  
+
 <p>
 <a href="./" > Go Home </a>
 </p>
