--- a/songs/road-of-trials-intro.html
+++ b/songs/road-of-trials-intro.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title> Road of Trials (Intro)</title> <link href="./css/main.css" rel="stylesheet" /> </head>
+<head> <title> Road of Trials (Intro)</title> <link href="../css/main.css" rel="stylesheet" /> </head>
 <body>
 <h1> Road of Trials (Intro) </h1>
 
@@ -12,7 +12,7 @@
 </p>
 
 <p>
-<a href="./" > Go Home </a>
+<a href="../" > Go Home </a>
 </p>
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 91 91">
