--- a/songs/threshold-bass.html
+++ b/songs/threshold-bass.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Threshold (Bass)</title> <link href="./css/main.css" rel="stylesheet" /> </head>
+<head> <title>Threshold (Bass)</title> <link href="../css/main.css" rel="stylesheet" /> </head>
 <body>
 <h1> Threshold (Bass Intro) &ndash; Journey OST </h1>
 <p> <b>Original Artist(s):</b> Austin Wintory </p>
@@ -9,7 +9,7 @@
 <div id="transcript">
 
 <p>
-<a href="./" > Go Home </a>
+<a href="../" > Go Home </a>
 </p>
 
 <h2>1.</h2>
