--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li> <a href="./songs/road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
     <li> <a href="./songs/i-was-born-for-this.html"> I was Born for This - Journey OST (Strings Intro) </a> </li>
     <li> <a href="./songs/threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
+    <li> <a href="./songs/Empty Town.html"> Empty Town – Deltarune Chapter 1 OST </a> </li>
 
   </ul>
 
