--- a/songs/Empty Town.html
+++ b/songs/Empty Town.html
@@ -5,6 +5,11 @@
 <h1> Empty Town </h1>
 <p> <b>Original Artist(s):</b> Toby Fox </p>
 <p> <b> Transcript:</b> Mirianimamura </p>
+  
+<p>
+<a href="../" > Go Home </a>
+</p>
+  
 <div id="transcript">
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 91 91">
