--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <li> Sera </li>
 
 </ul>
+  
+  <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github </a>
 
 <h2> Thanks </h2>
 
