--- a/songs/threshold-bass.html
+++ b/songs/threshold-bass.html
@@ -12,6 +12,10 @@
 <a href="../" > Go Home </a>
 </p>
 
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/hMBSIo_a96o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+
 <h2>1.</h2>
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 91 91">
