Fix broken css link for journey theme

--- a/songs/journey-theme.html
+++ b/songs/journey-theme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Journey Theme</title> <link href="../minimal-styling.css" rel="stylesheet" /> </head>
+<head> <title>Journey Theme</title> <link href="../css/minimal-styling.css" rel="stylesheet" /> </head>
 <body>
 <h1> Journey Theme </h1>
 <div id="transcript">
