--- a/songs/journey-theme.html
+++ b/songs/journey-theme.html
@@ -3,6 +3,11 @@
 <head> <title>Journey Theme</title> <link href="../css/minimal-styling.css" rel="stylesheet" /> </head>
 <body>
 <h1> Journey Theme </h1>
+
+<p>
+<a href="../" > Go Home </a>
+</p>
+
 <div id="transcript">
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 91 91">
