--- a/songs/journey-theme.html
+++ b/songs/journey-theme.html
@@ -8,6 +8,8 @@
 <a href="../" > Go Home </a>
 </p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mSGrNI6L2Y4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <div id="transcript">
 
 <table class="harp harp-0"><tr><td><svg class="note-root harp-button-0 " xmlns="https://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 91 91">
