--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <h2> Other </h2>
 
-<p> Made using <a href="https://github.com/t1-tracey/sky-python-transcriber-2"> Sky Python Transcriber 2</a>. </p>
+<p> Made using <a href="https://github.com/sky-music/sky-python-music-sheet-maker"> Sky Python Music Sheet Maker</a>. </p>
 
 </body>
 
