update css reference

--- a/songs/Empty Town.html
+++ b/songs/Empty Town.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Empty Town</title> <link href="../css/main.css" rel="stylesheet" /> </head>
+<head> <title>Empty Town</title> <link href="../css/older_main.css" rel="stylesheet" /> </head>
 <body>
 <h1> Empty Town </h1>
 <p> <b>Original Artist(s):</b> Toby Fox </p>
