--- a/songs/i-was-born-for-this.html
+++ b/songs/i-was-born-for-this.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head> <title>I Was Born For This (Journey)</title> <link href="../css/main.css" rel="stylesheet" /> </head>
+<head> <title>I Was Born For This (Journey)</title> <link href="../css/older_main.css" rel="stylesheet" /> </head>
 <body>
 <h1> I Was Born For This (Journey) </h1>
 <p> <b>Original Artist(s):</b> Austin Wintory </p>
