--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 <body>
 
 <h1> Sky Music </h1>
-
+  
   <h2> Music Sheets </h2>
+  
+  <ul>
+    <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
+    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms </a> </li>
+  </ul>
+
+  <h2> Older style Music Sheets </h2>
 
   <ul>
     <li> <a href="./songs/road-of-trials-intro.html"> Road of Trials - Journey OST (Cello Intro) </a> </li>
@@ -32,6 +39,7 @@
 <ul>
   <li> Tracey </li>
   <li> Sera </li>
+  <li> Bait </li>
 
 </ul>
   
