--- a/songs/Song_Of_Storms.html
+++ b/songs/Song_Of_Storms.html
@@ -2,6 +2,18 @@
 <html>
 <head> <title>Song Of Storms</title> <link href="../css/main.css" rel="stylesheet" /> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="./index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Song Of Storms </h1>
 <p> <b> Transcript:</b> Lemur (sheet music by Bait) </p>
 <div id="transcript">
