--- a/songs/sky光遇——穿越时空的思念.html
+++ b/songs/sky光遇——穿越时空的思念.html
@@ -2,6 +2,17 @@
 <html>
 <head> <title>sky光遇——穿越时空的思念</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/></head>
 <body>
+<table id="navigation">
+  <tr>
+    <td>
+      <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+    </td>
+    <td>
+      <h1><a href="./index.html">Sky Music</a></h1>
+    </td>
+  </tr>
+</table>
+
 <h1> sky光遇——穿越时空的思念 </h1>
 <p> <b> Transcript:</b> Leaf 二叶 </p>
 <div id="transcript">
