--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 
 <body>
 
-<h1> Sky Music </h1>
-  
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="./index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
   <h2> Music Sheets </h2>
-  
+
   <ul>
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms </a> </li>
@@ -42,7 +51,7 @@
   <li> Bait </li>
 
 </ul>
-  
+
   <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github </a>
 
 <h2> Thanks </h2>
