--- a/songs/sky光遇——穿越时空的思念.html
+++ b/songs/sky光遇——穿越时空的思念.html
@@ -8,7 +8,7 @@
       <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
     </td>
     <td>
-      <h1><a href="./index.html">Sky Music</a></h1>
+      <h1><a href="../index.html">Sky Music</a></h1>
     </td>
   </tr>
 </table>
