--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <li> <a href="./songs/threshold-bass.html"> Threshold - Journey OST (Bass Intro) </a> </li>
     <li> <a href="./songs/Empty Town.html"> Empty Town – Deltarune Chapter 1 OST </a> </li>
     <li> <a href="./songs/journey-theme.html"> Journey Theme — Journey OST </a> </li>
+    <li> <a href="./songs/leaf_em_test.html"> test </a> </li>
 
   </ul>
 
