--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
       </td>
     </tr>
   </table>
-  
-  <p> We recommend <a href="http://skysheetmusic.com">skysheetmusic.com</a> as piano simulator to practise songs.</p>
-  
-  <p>Demo:</p>
-  
-  <iframe src="https://player.vimeo.com/video/358248560" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/358248560">Learning Song Demo</a> from <a href="https://vimeo.com/t111111">t1</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
+ 
   <h2> Music Sheets </h2>
 
   <ul>
@@ -45,6 +38,14 @@
     <li> <a href="./songs/journey-theme.html"> Journey Theme — Journey OST </a> </li>
 
   </ul>
+
+  <h2> Piano Simulator and Example </h2>
+  <p> We can recommend <a href="http://skysheetmusic.com">skysheetmusic.com</a> as piano simulator to practise songs.</p>
+  
+  <p>Demo:</p>
+  
+  <iframe src="https://player.vimeo.com/video/358248560" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/358248560">Learning Song Demo</a> from <a href="https://vimeo.com/t111111">t1</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 
 <hr />
