--- a/songs/Dango daikazoku.html
+++ b/songs/Dango daikazoku.html
@@ -2,9 +2,23 @@
 <html>
 <head> <title>Dango daikazoku</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/> </head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Dango daikazoku </h1>
 <p> <b>Original Artist(s):</b> Kyoto Animation </p>
 <p> <b> Transcript:</b> Francis - Sky (music sheet by Tracey) </p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/X3sgY6xtRs0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <div id="transcript">
 
 <h2>Section 1</h2>
