utf-8 encoding on index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <title> Sky Music</title>
   <link href="./css/main.css" rel="stylesheet" />
+  <meta charset="utf-8"/>
 </head>
 
 <body>
@@ -25,8 +26,8 @@
 
   <ul>
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
-    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms </a> </li>
-    <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku </a> </li>
+    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
+    <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
