--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
 
 </ul>
 
-  <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github </a> </p>
+  <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
 
   <p> Made using <a href="https://github.com/sky-music/sky-python-music-sheet-maker"> Sky Python Music Sheet Maker</a>. </p>
 
 <h2> Thanks </h2>
 
 <p> Design and SVGs thanks to <a href="http://madwurmz.com"> madwurmz</a>.</p>
-<p> Thanks to friends and everyone for encouragement &lt;3 :D </p>
 
 </body>
 
