add link to Sweden

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
+    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
