--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
   <li> Tracey </li>
   <li> Sera </li>
   <li> Bait </li>
-
+  <li> Edpliskin89 </li>
+  
 </ul>
 
   <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
