--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title> Sky Music</title>
   <link href="./css/main.css" rel="stylesheet" />
   <meta charset="utf-8"/>
+    <meta property="og:title" content="Sky Music">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://sky-music.github.io">
+  <meta property="og:image" content="https://raw.githubusercontent.com/sky-music/sky-python-music-sheet-maker/master/images/flower_dance_intro.png">
+  <meta property="og:description" content="A fan-made website with visual music sheets for Sky: Children of the Light.">
+
 </head>
 
 <body>
