update open graph image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Sky Music">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://sky-music.github.io">
-  <meta property="og:image" content="https://raw.githubusercontent.com/sky-music/sky-python-music-sheet-maker/master/images/flower_dance_intro.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/sky-music/sky-music.github.io/master/images/opengraph_image.jpg">
   <meta property="og:description" content="A fan-made website with visual music sheets for Sky: Children of the Light.">
 
 </head>
