Add link to Shiny from Moana

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
+    <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
@@ -67,7 +68,7 @@
   <li> Sera </li>
   <li> Bait </li>
   <li> Edpliskin89 </li>
-  
+  <li> Mel </li>
 </ul>
 
   <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
