--- a/songs/Shiny.html
+++ b/songs/Shiny.html
@@ -1,277 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Shiny</title>  <meta charset="utf-8"/> 
-<style>
-    body {
-  font-family: "Avenir", Arial, sans-serif;
-}
-
-.note-root, .note-diamond, .note-circle {
-  transform: scale(1.0);
-  -ms-transform: scale(1.0);
-  -webkit-transform: scale(1.0);
-}
-
-.note-root svg {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.note-diamond svg {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.note-circle svg {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-table {
-  margin: 6px;
-  padding: 0px;
-  display: inline-block;
-  border-style: solid;
-  border-radius: 5px;
-  border-width: 1px;
-  border-color: black;
-
-
-
-}
-
-
-table.empty {
-  margin: 6px;
-  padding: 0px;
-  display: inline-block;
-  /*border-spacing: 5px;*/
-  border-style: solid;
-  border-radius: 5px;
-  border-width: 1px;
-  border-color: white;
-
-
-}
-
-td {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin: 0px;
-}
-
-.instrument-button{
-	fill:#ffffff;
-	opacity:0.4;
-}
-
-#transcript {
-  /*margin: 0 auto;*/
-}
-
-
-
-
-
-
-/*
-.highlighted-0 {
-  fill: lightcoral;
-  opacity: 1.0;
-}*/
-
-
-svg.harp-button-0 .unhighlighted.instrument-button-icon,
-svg.harp-button-1 .unhighlighted.instrument-button-icon,
-svg.harp-button-2 .unhighlighted.instrument-button-icon,
-svg.harp-button-3 .unhighlighted.instrument-button-icon,
-svg.harp-button-4 .unhighlighted.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: limegreen;
-  opacity: 0.25;
-}
-
-
-svg.harp-button-5 .unhighlighted.instrument-button-icon,
-svg.harp-button-6 .unhighlighted.instrument-button-icon,
-svg.harp-button-7 .unhighlighted.instrument-button-icon,
-svg.harp-button-8 .unhighlighted.instrument-button-icon,
-svg.harp-button-9 .unhighlighted.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: deepskyblue;
-  opacity: 0.25;
-}
-
-
-svg.harp-button-10 .unhighlighted.instrument-button-icon,
-svg.harp-button-11 .unhighlighted.instrument-button-icon,
-svg.harp-button-12 .unhighlighted.instrument-button-icon,
-svg.harp-button-13 .unhighlighted.instrument-button-icon,
-svg.harp-button-14 .unhighlighted.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: deeppink;
-  opacity: 0.25;
-}
-
-table.empty .instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-
-table.empty .unhighlighted.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-  opacity: 0.25;
-}
-
-table.empty svg.harp-button-7 .unhighlighted.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: grey;
-  opacity: 0.25;
-}
-
-.highlighted-0.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-svg.harp-button-0 path.highlighted-0,
-svg.harp-button-1 path.highlighted-0,
-svg.harp-button-2 path.highlighted-0,
-svg.harp-button-3 path.highlighted-0,
-svg.harp-button-4 path.highlighted-0 {
-  fill: limegreen;
-  opacity: 1.0;
-}
-
-svg.harp-button-5 path.highlighted-0,
-svg.harp-button-6 path.highlighted-0,
-svg.harp-button-7 path.highlighted-0,
-svg.harp-button-8 path.highlighted-0,
-svg.harp-button-9 path.highlighted-0 {
-  fill: deepskyblue;
-  opacity: 1.0;
-}
-
-svg.harp-button-10 path.highlighted-0,
-svg.harp-button-11 path.highlighted-0,
-svg.harp-button-12 path.highlighted-0,
-svg.harp-button-13 path.highlighted-0,
-svg.harp-button-14 path.highlighted-0 {
-  fill: deeppink;
-  opacity: 1.0;
-}
-
-.highlighted-1 {
-  fill: orange;
-  opacity: 1.0;
-}
-
-.highlighted-1.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-.highlighted-2 {
-  fill: gold;
-  opacity: 1.0;
-}
-
-.highlighted-2.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-.highlighted-3 {
-  fill: aquamarine;
-  opacity: 1.0;
-}
-
-.highlighted-3.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-.highlighted-3.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-.highlighted-4 {
-  fill: darkcyan;
-  opacity: 1.0;
-}
-
-.highlighted-4.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-.highlighted-5 {
-  fill: darkblue;
-  opacity: 1.0;
-}
-
-.highlighted-5.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-.highlighted-6 {
-  fill: blueviolet;
-  opacity: 1.0;
-}
-
-.highlighted-6.instrument-button-icon {
-  stroke-width: 3;
-  stroke: white;
-  fill: none;
-}
-
-hr {
-  color: grey;
-  opacity: 0.2;
-}
-
-.instrument-button-icon.empty {
-  fill: white;
-  stroke: white;
-}
-
-.note-diamond.empty {
-  fill: white;
-  stroke: white;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-@media (prefers-reduced-motion: reduce) {
-  html {
-    scroll-behavior: auto;
-  }
-}
-
-</style>
-
+<head> <title>Shiny</title>   <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/>  
+ 
 </head>
 
 <body>
+	
+<table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+	
 <h1> Shiny </h1>
 <p> <b>Original Artist(s):</b> Lin Manuel Miranda/Mark Mancina/Jemaine Clement </p>
 <p> <b> Transcript:</b> Mel </p>
