--- a/songs/Love_Like_You.html
+++ b/songs/Love_Like_You.html
@@ -2,6 +2,18 @@
 <html>
 <head> <title>Love Like You</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/> </head>
 <body>
+  
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Love Like You </h1>
 <p> <b>Original Artist(s):</b> Rebecca Sugar </p>
 <p> <b> Transcript:</b> Nezara </p>
