--- a/songs/Superstition_B.html
+++ b/songs/Superstition_B.html
@@ -2,6 +2,17 @@
 <html>
 <head> <title>Superstition B</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/> </head>
 <body>
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+  
 <h1> Superstition B </h1>
 <p> <b>Original Artist(s):</b> Stevie Wonder </p>
 <p> <b> Transcript:</b> Nezara </p>
