add links to sheets by Nezara
I uploaded them here because they were missing CSS ;-;

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
+    <li> <a href="./songs/Stevie_Wonder.html"> Stevie Wonder (transcribed by Nezara) </a> </li>
+    <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
+    <li> <a href="./songs/Superstition_B.html"> Superstition B (transcribed by Nezara) </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
@@ -69,6 +72,7 @@
   <li> Bait </li>
   <li> Edpliskin89 </li>
   <li> Mel </li>
+  <li> Nezara </li>
 </ul>
 
   <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
