Combine the 2 Superstition song halves

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
     <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
-    <li> <a href="./songs/Stevie_Wonder.html"> Stevie Wonder (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
-    <li> <a href="./songs/Superstition_B.html"> Superstition B (transcribed by Nezara) </a> </li>
+    <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
