--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
+    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html" Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
@@ -72,6 +73,7 @@
   <li> Edpliskin89 </li>
   <li> Mel </li>
   <li> Nezara </li>
+  <li> Peri </li>
 </ul>
 
   <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
