--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
-    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html" Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
+    <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
   </ul>
 
   <h2> Older style Music Sheets </h2>
