--- a/songs/Mitsuhas_Theme_Kimi_No_Na_wa.html
+++ b/songs/Mitsuhas_Theme_Kimi_No_Na_wa.html
@@ -2,6 +2,18 @@
 <html>
 <head> <title>Mitsuha's Theme (Kimi No Na wa)</title> <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/> </head>
 <body>
+
+  <table id="navigation">
+    <tr>
+      <td>
+        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+      </td>
+      <td>
+        <h1><a href="../index.html">Sky Music</a></h1>
+      </td>
+    </tr>
+  </table>
+
 <h1> Mitsuha's Theme (Kimi No Na wa) </h1>
 <p> <b>Original Artist(s):</b> Yojiro Noda </p>
 <p> <b> Transcript:</b> Peri </p>
