--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
   </ul>
 
+  <h2> Traditional </h2>
+  <ul>
+     <li> <a href="./songs/Amazing Grace.html"> Amazing Grace (John Newton)</a> </li>
+  </ul> 
+     
   <h2> Older style Music Sheets </h2>
 
   <ul>
