--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
   </ul>
 
+  <h2> Pop </h2>
+  <ul>
+     <li> <a href="./songs/Hey Jude.html"> Hey Jude (The Beatles)</a> </li>
+    <li> <a href="./songs/Yesterday.html"> Yesterday (The Beatles)</a> </li>
+    <li> <a href="./songs/Yellow Submarine.html"> Yellow Submarine (The Beatles)</a> </li>
+    <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>    
+  </ul> 
+  
   <h2> Traditional </h2>
   <ul>
      <li> <a href="./songs/Amazing Grace.html"> Amazing Grace (John Newton)</a> </li>
