--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
+    <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
+    <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
   </ul>
 
   <h2> Pop </h2>
