Added beethoven songs

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
   <ul>
      <li> <a href="./songs/Amazing Grace.html"> Amazing Grace (John Newton)</a> </li>
   </ul> 
+  
+  
+  <h2> Classical </h2>
+  <ul>
+     <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
+    <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
+  </ul> 
      
   <h2> Older style Music Sheets </h2>
 
