--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
     <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
     <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
+    <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
   </ul>
 
   <h2> Pop </h2>
@@ -61,6 +62,7 @@
   <ul>
      <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
+    <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
   </ul> 
      
   <h2> Older style Music Sheets </h2>
