Add home-page class to all paragraphs

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
   </ul>
 
   <h2> Piano Simulator and Example </h2>
-  <p> We can recommend <a href="http://skysheetmusic.com">skysheetmusic.com</a> as piano simulator to practise songs.</p>
+  <p class="home-page"> We can recommend <a href="http://skysheetmusic.com">skysheetmusic.com</a> as piano simulator to practise songs.</p>
 
   <p>Demo:</p>
 
   <iframe src="https://player.vimeo.com/video/358248560" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/358248560">Learning Song Demo</a> from <a href="https://vimeo.com/t111111">t1</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p class="home-page"><a href="https://vimeo.com/358248560">Learning Song Demo</a> from <a href="https://vimeo.com/t111111">t1</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 
 <hr />
@@ -100,13 +100,13 @@
   <li> Peri </li>
 </ul>
 
-  <p> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
+  <p class="home-page"> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
 
-  <p> Made using <a href="https://github.com/sky-music/sky-python-music-sheet-maker"> Sky Python Music Sheet Maker</a>. </p>
+  <p class="home-page"> Made using <a href="https://github.com/sky-music/sky-python-music-sheet-maker"> Sky Python Music Sheet Maker</a>. </p>
 
 <h2> Thanks </h2>
 
-<p> Design and SVGs thanks to <a href="http://madwurmz.com"> madwurmz</a>.</p>
+<p class="home-page"> Design and SVGs thanks to <a href="http://madwurmz.com"> madwurmz</a>.</p>
 
 </body>
 
