Add mimizan to list of contributors

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
      <li> <a href="./songs/Hey Jude.html"> Hey Jude (The Beatles)</a> </li>
     <li> <a href="./songs/Yesterday.html"> Yesterday (The Beatles)</a> </li>
     <li> <a href="./songs/Yellow Submarine.html"> Yellow Submarine (The Beatles)</a> </li>
-    <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>    
-  </ul> 
-  
+    <li> <a href="./songs/Eleanor Rigby.html"> Eleanor Rigby (The Beatles)</a> </li>
+  </ul>
+
   <h2> Traditional </h2>
   <ul>
      <li> <a href="./songs/Amazing Grace.html"> Amazing Grace (John Newton)</a> </li>
-  </ul> 
-  
-  
+  </ul>
+
+
   <h2> Classical </h2>
   <ul>
      <li> <a href="./songs/Ode to Joy.html"> Ode to Joy (Beethoven)</a> </li>
     <li> <a href="./songs/Fur Elise.html"> Für Elise (Beethoven)</a> </li>
     <li> <a href="./songs/Brahms Lullaby.html"> Lullaby (Brahms)</a> </li>
-  </ul> 
-     
+  </ul>
+
   <h2> Older style Music Sheets </h2>
 
   <ul>
@@ -98,6 +98,7 @@
   <li> Mel </li>
   <li> Nezara </li>
   <li> Peri </li>
+  <li> mimizan </li>
 </ul>
 
   <p class="home-page"> You can contribute here: <a href="https://github.com/sky-music/sky-music.github.io"> Sky Music on Github</a>.</p>
