--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <h2> Piano Simulator and Example </h2>
   <p class="home-page"> We can recommend <a href="http://skysheetmusic.com">skysheetmusic.com</a> as piano simulator to practise songs.</p>
 
-  <p>Demo:</p>
+  <p class="home-page">Demo:</p>
 
   <iframe src="https://player.vimeo.com/video/358248560" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <p class="home-page"><a href="https://vimeo.com/358248560">Learning Song Demo</a> from <a href="https://vimeo.com/t111111">t1</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
