Add Video games section on home page

--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
 
   <ul>
     <li> <a href="./songs/sky光遇——穿越时空的思念.html"> 穿越时空的思念 </a> </li>
-    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
     <li> <a href="./songs/Dango_daikazoku.html"> Dango daikazoku - Kyoto Animation </a> </li>
-    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
     <li> <a href="./songs/Shiny.html"> Shiny (Moana) </a> </li>
     <li> <a href="./songs/Love_Like_You.html"> Love Like You (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Superstition.html"> Superstition (transcribed by Nezara) </a> </li>
     <li> <a href="./songs/Mitsuhas_Theme_Kimi_No_Na_wa.html"> Mitsuha's Theme - Kimi No Na wa (transcribed by Peri) </a> </li>
+
+  </ul>
+
+  <h2> Video Games </h2>
+  <ul>
+    <li> <a href="./songs/Song_Of_Storms.html"> Song of Storms - Legend of Zelda </a> </li>
+    <li> <a href="./songs/c418_sweden.html"> Sweden (Minecraft) - C418 </a> </li>
     <li> <a href="./songs/Super Mario (simple version).html"> Super Mario NES Theme (simple version) </a> </li>
     <li> <a href="./songs/Super Mario.html"> Super Mario NES Theme (with chords) </a> </li>
     <li> <a href="./songs/Zelda Lullaby.html"> Zelda's Lullaby (Ocarina of Time) </a> </li>
