Add fav icon and specify site language

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 
-<html>
+<html lang="en-US">
 
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
+  <link rel="icon"
+      type="image/png"
+      href="https://sky-music.github.io/images/glowing_harp.png">
   <title> Sky Music</title>
   <link href="./css/main.css" rel="stylesheet" />
   <meta charset="utf-8"/>
