--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
   <link rel="icon"
       type="image/png"
-      href="https://sky-music.github.io/images/glowing_harp.png">
+      href="https://sky-music.github.io/images/single_chord_icon.jpeg">
   <title> Sky Music</title>
   <link href="./css/main.css" rel="stylesheet" />
   <meta charset="utf-8"/>
@@ -23,7 +23,7 @@
   <table id="navigation">
     <tr>
       <td>
-        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+        <a href="../index.html"><img src="../images/single_chord_icon.jpeg" width="100" height="100" /></a>
       </td>
       <td>
         <h1><a href="../index.html">Sky Music</a></h1>
