--- a/songs/Shiny.html
+++ b/songs/Shiny.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head> <title>Shiny</title>   <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/>  
- 
+<head> <title>Shiny</title>   <link href="../css/main.css" rel="stylesheet" /> <meta charset="utf-8"/>
+
 </head>
 
 <body>
-	
+
 <table id="navigation">
     <tr>
       <td>
-        <a href="../index.html"><img src="../images/glowing_harp.png" width="100" height="100" /></a>
+        <a href="../index.html"><img src="../images/single_chord_icon.jpeg" width="100" height="100" /></a>
       </td>
       <td>
         <h1><a href="../index.html">Sky Music</a></h1>
       </td>
     </tr>
   </table>
-	
+
 <h1> Shiny </h1>
 <p> <b>Original Artist(s):</b> Lin Manuel Miranda/Mark Mancina/Jemaine Clement </p>
 <p> <b> Transcript:</b> Mel </p>
